--- a/app/assets/javascripts/app/budgets.js.coffee.erb
+++ b/app/assets/javascripts/app/budgets.js.coffee.erb
@@ -87,17 +87,6 @@ app.controller 'BudgetsController', ['$scope', '$http', '$uibModal', ($scope, $h
   @calendarIsOpen = false
   @openCalendar = -> @calendarIsOpen = true
 
-  @generatePeriods = ->
-    return [] unless _self.selectedBudget
-    parsed = /^(\d{4})-(\d{2})-(\d{2})$/.exec(_self.selectedBudget.start_date)
-    year  = parseInt(parsed[1])
-    month = parseInt(parsed[2])
-    date  = parseInt(parsed[3])
-    d = new Date(year, month - 1, date)
-    _.map [0..11], (index) ->
-      {
-        start_date: new Date(d.getFullYear(), d.getMonth() + index, 1)
-      }
   @generateBudgetItems = (accountType) ->
     _.chain($scope.accounts).filter( (a) ->
       a.account_type == accountType
@@ -130,22 +119,33 @@ app.controller 'BudgetsController', ['$scope', '$http', '$uibModal', ($scope, $h
     _self.selectedBudget = null unless budgetId
     id = parseInt(budgetId)
     _self.selectedBudget = _.find(_self.budgets, (b) -> b.id == id)
-    _self.periods = _self.generatePeriods()
     _self.items = _self.generateItems()
     return
   return
 ]
 
-class BudgetItem
-  constructor: (@account, @rawPeriods) ->
-  caption: -> @account.name
-  periods: -> @rawPeriods
-  isHeader: false
+BudgetItem = (account, budgetItem) ->
+  _self = this
+  @account = account
+  if @budgetItem
+    @period = @budgetItem.periods
+  else
+    @periods = _.map [0..11], (_) ->
+      {
+        budget_amount: 0,
+        start_date: new Date(2015, 0, 1)
+      }
+  @caption = -> @account.name
+  @isHeader = false
 
 class HeaderItem
   constructor: (@accountType, @items) ->
+    @periods = _.map [0..11], (_) ->
+      {
+        budget_amount: 0,
+        start_date: new Date(2015, 0, 1)
+      }
   caption: -> @accountType
-  periods: -> [0,0,0,0,0,0,0,0,0,0,0,0]
   isHeader: true
 
 app.controller 'BudgetFormController', ['$scope', '$uibModalInstance', ($scope, $uibModalInstance) ->
