--- a/app/assets/templates/budget-manager.html.haml
+++ b/app/assets/templates/budget-manager.html.haml
@@ -22,6 +22,35 @@
     .modal-footer
       %button.btn.btn-primary{ 'ng-click' => 'saveBudgetForm()', 'ng-disabled' => 'budgetForm.$invalid' } Save
       %button.btn.btn-default{ 'ng-click' => 'cancelBudgetForm()' } Cancel
+  %script{ :type => 'text/ng-template', :id => 'budget-item-form.html' }
+    .modal-header
+      %button.close{ 'ng-click' => 'cancelBudgetItemForm()', 'aria-hidden' => true } &times;
+      %h3.model-title Edit budget item
+    .modal-body
+      .row
+        .col-sm-6
+          .form-group
+            %select.form-control{ 'ng-model' => 'selectedMethod' }
+              %option annual
+              %option monthly
+              %option weekly
+          %form.css-form{ :name => 'budgetItemMonthlyForm', :novalidate => true, 'ng-show' => 'selectedMethod == "monthly"' }
+            .form-group
+              %label.control-label{ :for => 'monthlyAmount' } Monthly Average
+              %input.form-control{ :type => 'number', 'ng-model' => 'monthlyAverage' }
+            .form-group
+              %button.btn.btn-primary{ :type => 'button', } Apply
+        .col-sm-6
+          %table.table.table-striped
+            %tr{ 'ng-repeat' => 'period in budgetsCtrl.formBudgetItem.periods' }
+              %th.text-right {{ period.start_date | date:'MMM yyyy' }}
+              %td.text-right {{ period.budget_amount | number:2 }}
+            %tr
+              %th.text-right Total
+              %td.text-right {{ budgetsCtrl.formBudgetItem.total() | number:2 }}
+    .modal-footer
+      %button.btn.btn-default{ 'ng-click' => 'saveBudgetItemForm()', 'ng-disabled' => 'budgetItemForm.$invalid' } Save
+      %button.btn.btn-default{ 'ng-click' => 'cancelBudgetItemForm()' } Cancel
   .panel.panel-primary
     .panel-heading Budgets
     .panel-body
@@ -41,7 +70,8 @@
         .col-md-12
           %table.table.table-striped{ 'ng-show' => 'budgetsCtrl.selectedBudget' }
             %tr
-              %th.right-border Account
+              %th Account
+              %th.right-border &nbsp;
               %th.text-right Total
               %th.text-right{ 'ng-hide' => 'budgetsCtrl.periodsAreVisible' } Average
               %th.text-right{ 'ng-repeat' => 'period in budgetsCtrl.items[0].periods', 'ng-show' => 'budgetsCtrl.periodsAreVisible' } {{ period.start_date | date:'MMM yyyy' }}
@@ -51,7 +81,10 @@
                 %button.btn.btn-xs.btn-default{ 'ng-click' => 'budgetsCtrl.hidePeriods()', 'ng-show' => 'budgetsCtrl.periodsAreVisible', :title => 'Click here to hide period details.' }
                   %span.glyphicon.glyphicon-eye-close{ 'arial-hidden' => true }
             %tr{ 'ng-repeat' => 'item in budgetsCtrl.items', 'ng-class' => '{"header-row": item.isHeader}' }
-              %td.right-border {{ item.caption() }}
+              %td {{ item.caption() }}
+              %td.right-border
+                %button.btn.btn-xs.btn-info{ 'ng-click' => 'budgetsCtrl.editItem(item)', 'ng-hide' => 'item.isHeader' }
+                  %span.glyphicon.glyphicon-pencil{ 'arial-hidden' => true }
               %td.text-right 0.00
               %td.text-right{ 'ng-hide' => 'budgetsCtrl.periodsAreVisible' } 0.00
               %td.text-right{ 'ng-repeat' => 'period in item.periods', 'ng-show' => 'budgetsCtrl.periodsAreVisible' } {{ period.budget_amount | number:2 }}
