--- a/app/assets/templates/budget-manager.html.haml
+++ b/app/assets/templates/budget-manager.html.haml
@@ -53,12 +53,12 @@
                   %button.btn.btn-xs.btn-default{ 'ng-click' => 'budgetsCtrl.hidePeriods()', 'ng-show' => 'budgetsCtrl.periodsAreVisible', :title => 'Click here to hide period details.' }
                     %span.glyphicon.glyphicon-eye-close{ 'arial-hidden' => true }
               %tr{ 'ng-repeat' => 'item in budgetsCtrl.items', 'ng-class' => '{"header-row": item.isHeader}' }
-                %td {{ item.caption() }}
+                %td {{ item.caption }}
                 %td.right-border
                   %button.btn.btn-xs.btn-info{ 'ng-click' => 'budgetsCtrl.editItem(item)', 'ng-hide' => 'item.isHeader' }
                     %span.glyphicon.glyphicon-pencil{ 'arial-hidden' => true }
-                %td.text-right 0.00
-                %td.text-right{ 'ng-hide' => 'budgetsCtrl.periodsAreVisible' } 0.00
+                %td.text-right {{ item.total() | number:2 }}
+                %td.text-right{ 'ng-hide' => 'budgetsCtrl.periodsAreVisible' } {{ item.average() | number: 2 }}
                 %td.text-right{ 'ng-repeat' => 'period in item.periods', 'ng-show' => 'budgetsCtrl.periodsAreVisible' } {{ period.budget_amount | number:2 }}
                 %td &nbsp;
           %p
