--- a/app/assets/javascripts/app/view.js.coffee.erb
+++ b/app/assets/javascripts/app/view.js.coffee.erb
@@ -1,6 +1,6 @@
 app = angular.module 'view', []
 
-app.controller 'ViewController', ['$scope', '$http', ($scope, $http) ->
+app.controller 'ViewController', ['$scope', ($scope, $http) ->
     _self = this
     @searchInput = ""
     @matches = []
@@ -9,7 +9,7 @@ app.controller 'ViewController', ['$scope', '$http', ($scope, $http) ->
       new SimpleMatchingHandler('account-manager', 'Manage accounts', ['accounts']),
       new SimpleMatchingHandler('budget-manager', 'Manage budgets', ['budgets']),
       new SimpleMatchingHandler('purchase-entry', 'Enter purchases', ['purchases']),
-      new AccountMatchingHandler('account-register', 'Register', $scope, $http)
+      new AccountMatchingHandler('account-register', 'Register', $scope)
     ]
     @selected = null
     @search = ->
@@ -52,7 +52,7 @@ class SimpleMatchingHandler
     else
       []
 
-AccountMatchingHandler = (elementKey, description, $scope, $http) ->
+AccountMatchingHandler = (elementKey, description, $scope) ->
   _self = this
   @elementKey = elementKey
   @description = description
