--- a/app/views/accounts/new_commodity_transaction.html.haml
+++ b/app/views/accounts/new_commodity_transaction.html.haml
@@ -8,7 +8,7 @@
       =fields_for(:purchase, @creator) do |f|
         .form-group
           =f.label :transaction_date
-          =f.text_field :transaction_date, class: 'date_field', class: 'form-control'
+          =f.text_field :transaction_date, class: 'date_field form-control'
         .form-group
           =f.label :action
           =f.select :action, options_for_select(CommodityTransactionCreator::ACTIONS, @creator.action), {}, class: 'form-control'
