--- a/app/views/commodities/_form_fields.html.haml
+++ b/app/views/commodities/_form_fields.html.haml
@@ -1,6 +1,6 @@
 .form-group
   =f.label :name
-  =f.text_field :name, autofocus: true, class: 'form-control', autofocus: true
+  =f.text_field :name, class: 'form-control', autofocus: true
 
 .form-group
   =f.label :symbol
